# cnil

./: .clang-format  .gitignore  CMakeLists.txt  readme.md  test.c  test.h  testing.h  testing_reflected.c
nil/: alloc.c  alloc.h  allocator.c  allocator.h  ansi_colors.h  bserial.h  codec.c  codec.h  con.c  con.h  format.c  format.h  hash.c  hash.h  hashtable.c  hashtable.h  linked_list.h  macro_utils.h  math.h  memory_util.h  nint.h  non.c  non.h  panic.c  panic.h  path_utils.c  path_utils.h  reflect.c  reflect.h  reflect_registry.c  register_types.c  slice.c  slice.h  stream.c  stream.h  string.c  string.h  sys.c  trait.c  trait.h  (+8 more)
nil/internal/: cwisstable_extensions.h  sys_alloc.h  sys_alloc_linux.c  vec_types.h
nil/unused/: fs.c  fs.h  vec_p.h
nil_benchmark/: bench.c  bench.h  benchmarks.h  cwisstable.h  main.c  swisstable.c
nil_reflector/: allocator.c  allocator.h  data.c  data.h  main.c  parse.c  parse.h  write.c  write.h
nil_tests/: hashtable.c  hashtable.h  main.c  reflection.c  reflection.h  test.h
